--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -41,5 +42,14 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
       <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script>
+          AOS.init(
+              {
+                  offset: 200,
+                  duration: 1000
+              }
+          );
+      </script>
   </body>
 </html>
